--- a/app/src/main/res/layout/design_rutas.xml
+++ b/app/src/main/res/layout/design_rutas.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="3dp"
         android:id="@+id/cv">
         <LinearLayout
             android:layout_width="match_parent"
@@ -24,7 +24,7 @@
                     <LinearLayout
                         android:layout_width="80dp"
                         android:layout_height="match_parent"
-                        android:background="@color/colorAccent"
+                        android:background="@color/colorPrimaryDark"
                         android:src="@mipmap/icon_estacion"
                         >
                         <TextView
@@ -50,16 +50,16 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:maxLines="1"
+                        android:maxLines="2"
                         android:textSize="23sp"
                         android:textColor="@color/titulo"
                         android:text="REGULAR A"
                         android:id="@+id/txtNombreRu" />
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="14sp"
                         android:id="@+id/txtParadasRu"
@@ -68,21 +68,21 @@
                         />
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="14sp"
-                        android:gravity="center"
-                        android:maxLines="1"
+                        android:gravity="center|left"
+                        android:maxLines="2"
                         android:textColor="@color/colorAccent"
                         android:id="@+id/txtHoraRu"
-                        android:text="6:00AM-12:00PM   5:00PM- 11:00PM"
+                        android:text="6:00AM-12:00PM   5:00PM- 11:00PM "
                         android:drawableLeft="@drawable/ic_hora"
                         />
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="15sp"
-                        android:gravity="center"
+                        android:textSize="14sp"
+                        android:gravity="center|left"
                         android:textColor="@color/subtitulo"
                         android:id="@+id/txtFrecuRu"
                         android:text="Cada 30 minutos"
