--- a/app/src/main/res/layout/fragment_home__map.xml
+++ b/app/src/main/res/layout/fragment_home__map.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     class="com.google.android.gms.maps.SupportMapFragment"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -25,6 +26,110 @@
     <!--android:layout_margin="38dp"-->
     <!--android:src="@drawable/floattt"-->
     <!--/>-->
+
+    <LinearLayout
+        android:id="@+id/lineInfoEstacion"
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:weightSum="1"
+        android:background="@color/white"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:visibility="visible"
+        android:orientation="horizontal">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.3"
+
+            >
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:id="@+id/photoEstacionD"
+                android:layout_weight="0.3"
+                android:layout_alignParentTop="true"
+                android:src="@mipmap/icon_estacion"
+                />
+        </android.support.v7.widget.CardView>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="0.7"
+            android:layout_margin="8dp"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:maxLines="2"
+                        android:textSize="23sp"
+                        android:textColor="@color/titulo"
+                        android:text="PARQUE DEL TRABAJO"
+                        android:id="@+id/txt_tituloD" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/txt_direccionD"
+                        android:textSize="15sp"
+                        android:textColor="@color/subtitulo"
+                        android:text="Av. Túpac Amaru con Av. Chinchaysuyo"
+                        />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="5dp"
+                    android:orientation="horizontal"
+                    >
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_tarjeta"
+                        android:id="@+id/recargar"
+                        android:layout_marginRight="20dp"
+                        />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_hora"
+                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:textSize="15sp"
+                        android:id="@+id/horaD"
+                        android:layout_margin="8dp"
+                        android:textColor="@color/subtitulo"
+                        android:text="8:00 - 23:00"
+                        />
+                </LinearLayout>
+
+
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
 
 
 </RelativeLayout>
