--- a/app/src/main/res/layout/content_detalle_estacion.xml
+++ b/app/src/main/res/layout/content_detalle_estacion.xml
@@ -17,7 +17,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-
+                android:layout_margin="8dp"
                 android:weightSum="2"
                 android:orientation="horizontal">
                 <TextView
@@ -76,7 +76,7 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="8:00 23:00"
+                    android:text="8:00 a 23:00"
                     android:textColor="#000"
                     android:layout_margin="8dp"
                     android:layout_weight="1"
